Fixed headers and card spacing

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -226,7 +226,7 @@ body:-webkit-scrollbar {
 	font-size: 18px;
 }
 
-.card-social a {
+.card-social i {
 	text-decoration: none;
 	font-size: 18px;
 	color: black;
